# price_model

./: .commit_msg.txt  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  nightly.yml
config/: data.yaml  features.yaml
config/experiments/: baseline.yaml  chronos.yaml  classical.yaml  extended.yaml  extended_kaggle.yaml  extended_kaggle_v2.yaml  extended_kaggle_v2_anomaly.yaml  extended_kaggle_v2_expanded.yaml  extended_kaggle_v2_ohlcv.yaml  extended_kaggle_v2_ohlcv_subset.yaml  extended_kaggle_v2_pit.yaml  fama_french.yaml  smoke.yaml  smoke_expanded.yaml
config/models/: baselines.yaml  lightgbm.yaml
notebooks/: 00_reproduce_headline.ipynb  01_diagnostics.ipynb  02_classical_timeseries.ipynb  03_robustness.ipynb  04_portfolio_attribution.ipynb
notebooks/kaggle_references/: correct-split-lightgbm-no-leak.ipynb  hedge-fund-feature-analysis-lightgbm.ipynb  hedge-fund-time-series-forecast-optimization.ipynb  multiple-lightgbm-approach.ipynb  quantitive-time-series-forecasting-hedge-funs.ipynb
scripts/: run_experiment.py  smoke_synthetic.py
src/price_model/: cli.py
src/price_model/dashboard/: _common.py  app.py
src/price_model/dashboard/pages/: 1_leaderboard.py  2_stock_detail.py  3_model_performance.py  4_consensus.py
src/price_model/data/: loaders.py  membership.py  sectors.py  splits.py  tickers.py  universe.py
src/price_model/data/sources/: fama_french.py  sp500_membership.py  yfinance_source.py
src/price_model/data/universes/: sp500.txt  sp500_pit.txt  top20_2026_01_01.txt
src/price_model/eval/: metrics.py  robustness.py
src/price_model/features/: base.py  cross_features.py  cross_sectional.py  factor_loadings.py  pipeline.py  targets.py  technical.py
src/price_model/models/: __init__.py  base.py  baseline.py  boosting.py  classical.py  foundation.py
src/price_model/pipeline/: predict.py  train.py  walk_forward.py
src/price_model/serving/: store.py
tests/: conftest.py  test_chronos_integration.py  test_classical_models.py  test_fama_french.py  test_features_pipeline.py  test_membership.py  test_models.py  test_no_leakage.py  test_ohlcv_features.py  test_robustness.py  test_store.py  test_tickers.py  test_walk_forward.py  test_yfinance_normalize.py
