[project]
name = "price-model"
version = "0.1.0"
description = "Cross-sectional equity return predictor with walk-forward eval and a Streamlit dashboard."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "pandas>=2.2",          # yfinance still returns pandas; convert at the edge
    "numpy>=1.26",
    "pyarrow>=15",
    "duckdb>=1.0",
    "yfinance>=0.2.40",
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
    "scipy>=1.13",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "streamlit>=1.36",
    "plotly>=5.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "pyright>=1.1",
    "pre-commit>=3.7",
]
chronos = [
    # Foundation-model dependencies. Pulls in ~1GB of torch/transformers/accelerate.
    # Install only if you want to use the ChronosZeroShot model.
    "torch>=2.2",
    "transformers>=4.40",
    "accelerate>=0.30",
    "chronos-forecasting>=1.2",
]

[project.scripts]
price-model = "price_model.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/price_model"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
